fix(docs): fix page layout overflow scroll to auto

--- a/docs/src/components/css/style.css
+++ b/docs/src/components/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .page-scroll {
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
 }
 
@@ -101,7 +101,7 @@ table td {
 }
 
 .scroll-y {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .bitmap-container {
   text-align: center !important;
